--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -42,7 +42,8 @@
               console.log(key, value);
               createTree(null, value);
             } else {
-              console.log(key);
+              li.append(key);
+              container.append(li);
             }
           });
         }
