--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -39,8 +39,10 @@
           Object.entries(obj).forEach(function ([key, value]) {
             const li = document.createElement("li");
             if (Object.entries(value).length) {
-              console.log(key, value);
-              createTree(null, value);
+              const ul = document.createElement("ul");
+              li.append(key, ul);
+              container.append(li);
+              createTree(ul, value);
             } else {
               li.append(key);
               container.append(li);
