--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -67,8 +67,8 @@
       //   }
       // }
 
-      // createTree(container, data);
-      // document.body.append(container);
+      createTree(container, data);
+      document.body.append(container);
     </script>
   </body>
 </html>
