--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
   <script>
+    let data = {
+      Fish: {
+        trout: {},
+        salmon: {},
+      },
+
+      Tree: {
+        Huge: {
+          sequoia: {},
+          oak: {},
+        },
+        Flowering: {
+          "apple tree": {},
+          magnolia: {},
+        },
+      },
+    };
+
     function createTree() {}
   </script>
 </html>
