--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -20,5 +20,8 @@
     };
 
     function createTree() {}
+
+    let container = document.getElementById("container");
+    createTree(container, data);
   </script>
 </html>
