--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -51,7 +51,9 @@
         },
       };
 
-      function createTree() {}
+      function createTree(container, obj) {
+        container.innerHTML = createTreeText(obj);
+      }
 
       createTree(document.getElementById("tree"), data);
     </script>
