--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -55,6 +55,8 @@
         container.innerHTML = createTreeText(obj);
       }
 
+      function createTreeText(obj) {}
+
       createTree(document.getElementById("tree"), data);
     </script>
   </body>
