--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -55,7 +55,14 @@
         container.innerHTML = createTreeText(obj);
       }
 
-      function createTreeText(obj) {}
+      function createTreeText(obj) {
+        let li = "";
+        let ul;
+
+        for (const key in obj) {
+          li += "<li>" + key + "</li>";
+        }
+      }
 
       createTree(document.getElementById("tree"), data);
     </script>
