--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -62,6 +62,12 @@
         for (const key in obj) {
           li += "<li>" + key + "</li>";
         }
+
+        if (li) {
+          ul = "<ul>" + li + "</ul>";
+        }
+
+        return ul || "";
       }
 
       createTree(document.getElementById("tree"), data);
