--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-2.html
@@ -58,14 +58,16 @@
 
       function createTreeText(obj) {
         let li = "";
+        let ul;
         for (const key in obj) {
           li += "<li>" + key + createTreeText(obj[key]) + "</li>";
         }
+
         if (li) {
-          return "<ul>" + li + "</ul>";
-        } else {
-          return li;
+          ul = "<ul>" + li + "</ul>";
         }
+
+        return ul || li;
       }
 
       createTree(document.getElementById("tree"), data);
