--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -21,6 +21,10 @@
           },
         },
       };
+
+      function createTree(container, obj) {
+        container.append(createTreeDom(obj));
+      }
     </script>
   </body>
 </html>
