--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -25,6 +25,10 @@
       function createTree(container, obj) {
         container.append(createTreeDom(obj));
       }
+
+      function createTreeDom(obj) {}
+
+      createTree(document.getElementById("tree"), data);
     </script>
   </body>
 </html>
