--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -26,7 +26,13 @@
         container.append(createTreeDom(obj));
       }
 
-      function createTreeDom(obj) {}
+      function createTreeDom(obj) {
+        const ul = document.createElement("ul");
+
+        for (const key in obj) {
+        }
+        return ul;
+      }
 
       createTree(document.getElementById("tree"), data);
     </script>
