--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -27,10 +27,11 @@
       }
 
       function createTreeDom(obj) {
+        if (Object.keys(obj).length) {
+          return;
+        }
         const ul = document.createElement("ul");
 
-        for (const key in obj) {
-        }
         return ul;
       }
 
