--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -33,6 +33,7 @@
 
         for (const key in obj) {
           const li = document.createElement("li");
+          li.innerHTML = key;
         }
         return ul;
       }
