--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -34,6 +34,13 @@
         for (const key in obj) {
           const li = document.createElement("li");
           li.innerHTML = key;
+
+          const childrenUl = createTreeDom(obj[key]);
+          if (childrenUl) {
+            li.append(childrenUl);
+          }
+
+          ul.append(li);
         }
         return ul;
       }
