--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -28,8 +28,7 @@
       }
 
       function createTreeDom(obj) {
-        if (!Object.keys(obj).length) return;
-
+        // if (!Object.keys(obj).length) return;
         const ul = document.createElement("ul");
 
         for (const key in obj) {
