--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -24,7 +24,6 @@
 
       function createTree(container, obj) {
         container.append(createTreeDom(obj));
-        console.log(createTreeDom(obj));
       }
 
       function createTreeDom(obj) {
@@ -32,6 +31,11 @@
         const ul = document.createElement("ul");
 
         for (const key in obj) {
+          const li = document.createElement("li");
+          li.innerHTML = key;
+          const childrenUl = createTreeDom(obj[key]);
+          li.append(childrenUl);
+          ul.append(li);
         }
 
         return ul;
