--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object-3.html
@@ -34,7 +34,11 @@
           const li = document.createElement("li");
           li.innerHTML = key;
           const childrenUl = createTreeDom(obj[key]);
-          li.append(childrenUl);
+
+          if (childrenUl) {
+            li.append(childrenUl);
+          }
+
           ul.append(li);
         }
 
