--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/show-descendants-in-a-tree.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/show-descendants-in-a-tree.html
@@ -49,6 +49,7 @@
 
       for (const li of lis) {
         const descendants = li.querySelectorAll("li").length;
+        if (!descendants) continue;
         li.firstChild.data += "[" + descendants + "]";
       }
     </script>
