--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/show-descendants-in-a-tree.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/show-descendants-in-a-tree.html
@@ -48,9 +48,9 @@
       const lis = document.body.firstElementChild.querySelectorAll("li");
 
       for (const li of lis) {
-        const descendants = li.querySelectorAll("li").length;
-        if (!descendants) continue;
-        li.firstChild.data += "[" + descendants + "]";
+        const descendantsCount = li.querySelectorAll("li").length;
+        if (!descendantsCount) continue;
+        li.firstChild.data += "[" + descendantsCount + "]";
       }
     </script>
   </body>
