--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
@@ -52,8 +52,12 @@
       function countDays(year, month) {
         const mon = month - 1;
         const date = new Date(year, mon);
+        let days = 0;
 
-        while (date.getMonth() === mon) {}
+        while (date.getMonth() === mon) {
+          days = date.getDate();
+          date.setDate(days + 1);
+        }
       }
 
       createCalendar(calendar, 2023, 3);
