--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
@@ -58,6 +58,8 @@
           days = date.getDate();
           date.setDate(days + 1);
         }
+
+        return days;
       }
 
       createCalendar(calendar, 2023, 3);
