--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
@@ -44,6 +44,8 @@
           table += "<td></td>";
         }
 
+        while (date.getMonth() === month - 1) {}
+
         elem.innerHTML = table;
       }
 
