--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-calendar.html
@@ -78,7 +78,7 @@
         return days;
       }
 
-      createCalendar(calendar, 2023, 4);
+      createCalendar(document.getElementById("calendar"), 2023, 4);
     </script>
   </body>
 </html>
