--- a/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
+++ b/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
@@ -10,6 +10,10 @@
         console.log("tick");
         timer = setTimeout(tick, 2000);
       }, 2000);
+
+      let delay = 5000;
+
+      let timerId = setTimeout(function request() {}, delay);
     </script>
   </body>
 </html>
