--- a/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
+++ b/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
@@ -20,6 +20,8 @@
           // increase the interval to the next run
           delay *= 2;
         }
+
+        timerId = setTimeout(request, delay);
       }, delay);
     </script>
   </body>
