--- a/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
+++ b/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
@@ -23,6 +23,16 @@
 
         timerId = setTimeout(request, delay);
       }, delay);
+
+      let i = 1;
+
+      setInterval(function () {
+        func(i++);
+      }, 100);
+
+      function func(number) {
+        console.log(number);
+      }
     </script>
   </body>
 </html>
