--- a/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
+++ b/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/nested-settimeout.html
@@ -30,6 +30,12 @@
         func(i++);
       }, 100);
 
+      let j = 1;
+      setTimeout(function run() {
+        func(j++);
+        setTimeout(run, 100);
+      }, 100);
+
       function func(number) {
         console.log(number);
       }
