--- a/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/tasks/output-every-second-3.html
+++ b/part-1-the-javascript-language/advenced-working-with-functions/scheduling-settimeout-and-setinterval/tasks/output-every-second-3.html
@@ -5,7 +5,7 @@
       function printNumbers(from, to) {
         function run() {
           console.log(from);
-          if (current > to) {
+          if (from === to) {
             clearInterval(timerId);
           }
           from++;
