--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/colored-clock-with-setinterval.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/colored-clock-with-setinterval.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div id="clock">
+      <span class="hour">hh</span>:<span>min</span>:<span>ss</span>
+    </div>
+
     <!-- click on this button calls clockStart() -->
     <input
       type="button"
