--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/colored-clock-with-setinterval.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/colored-clock-with-setinterval.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .hour {
+        color: red;
+      }
+      .min {
+        color: green;
+      }
+      .sec {
+        color: blue;
+      }
+    </style>
+  </head>
   <body>
     <div id="clock">
-      <span class="hour">hh</span>:<span>min</span>:<span>ss</span>
+      <span class="hour">hh</span>:<span class="min">mm</span>:<span class="sec"
+        >ss</span
+      >
     </div>
-
     <!-- click on this button calls clockStart() -->
     <input
       type="button"
@@ -18,5 +32,32 @@
       onclick="clockStop()"
       value="Stop"
     />
+
+    <script>
+      let timerId;
+
+      function clockStart() {
+        timerId = setInterval(function () {
+          const clock = document.getElementById("clock");
+          const date = new Date();
+
+          let hours = date.getHours();
+          if (hours < 10) {
+            hours = "0" + hours;
+          }
+          clock.children[0].innerHTML = hours;
+
+          let minutes = date.getMinutes();
+          if (minutes < 10) {
+            minutes = "0" + minutes;
+          }
+          clock.children[1].innerHTML = minutes;
+        }, 1000);
+      }
+
+      function clockStop() {
+        clearInterval(timerId);
+      }
+    </script>
   </body>
 </html>
