--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/colored-clock-with-setinterval.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/colored-clock-with-setinterval.html
@@ -36,23 +36,32 @@
     <script>
       let timerId;
 
+      function update() {
+        const clock = document.getElementById("clock");
+        const date = new Date();
+
+        let hours = date.getHours();
+        if (hours < 10) {
+          hours = "0" + hours;
+        }
+        clock.children[0].innerHTML = hours;
+
+        let minutes = date.getMinutes();
+        if (minutes < 10) {
+          minutes = "0" + minutes;
+        }
+        clock.children[1].innerHTML = minutes;
+
+        let seconds = date.getSeconds();
+        if (seconds < 10) {
+          seconds = "0" + seconds;
+        }
+        clock.children[2].innerHTML = seconds;
+      }
+
       function clockStart() {
-        timerId = setInterval(function () {
-          const clock = document.getElementById("clock");
-          const date = new Date();
-
-          let hours = date.getHours();
-          if (hours < 10) {
-            hours = "0" + hours;
-          }
-          clock.children[0].innerHTML = hours;
-
-          let minutes = date.getMinutes();
-          if (minutes < 10) {
-            minutes = "0" + minutes;
-          }
-          clock.children[1].innerHTML = minutes;
-        }, 1000);
+        update();
+        timerId = setInterval(update, 1000);
       }
 
       function clockStop() {
