--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/insert-the-html-in-the-list.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/insert-the-html-in-the-list.html
@@ -8,7 +8,7 @@
 
     <script>
       const one = document.getElementById("one");
-      const html = "<li>2</li><li>3</li>";
+      const html = "<li>-2-</li><li>-3-</li>";
       one.insertAdjacentHTML("afterend", html);
     </script>
   </body>
