https://www.notion.so

--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/sort-the-table.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/sort-the-table.html
@@ -32,5 +32,9 @@
         </tr>
       </tbody>
     </table>
+
+    <script>
+      const tbody = document.getElementById("table").querySelector("tbody");
+    </script>
   </body>
 </html>
