--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/sort-the-table.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/sort-the-table.html
@@ -58,7 +58,7 @@
         }
       );
 
-      tbody.append(...sortedContent);
+      tbody.append(...sortedContent2);
     </script>
   </body>
 </html>
