--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -3,6 +3,7 @@
   <body class="main page">
     <script>
       // If we assign something to elem.className, it replaces the whole string of classes.
+      document.body.className = "new-class";
       console.log(document.body.className);
     </script>
   </body>
