--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -5,6 +5,9 @@
       // If we assign something to elem.className, it replaces the whole string of classes.
       document.body.className = "new-class";
       console.log(document.body.className);
+
+      // add a class
+      document.body.classList.add("article");
     </script>
   </body>
 </html>
