--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -8,6 +8,7 @@
 
       // add a class
       document.body.classList.add("article");
+      console.log(document.body.className);
     </script>
   </body>
 </html>
