--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -10,5 +10,7 @@
       document.body.classList.add("article");
       console.log(document.body.className);
     </script>
+
+    <script src="index.js"></script>
   </body>
 </html>
