--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -12,5 +12,11 @@
     </script>
 
     <script src="index.js"></script>
+
+    <script>
+      for (const classe of document.body.classList) {
+        console.log(classe);
+      }
+    </script>
   </body>
 </html>
