--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -15,7 +15,7 @@
 
     <script>
       for (const classe of document.body.classList) {
-        console.log(classe);
+        console.log("::", classe);
       }
     </script>
   </body>
