--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -19,6 +19,11 @@
 
     <div id="block"></div>
 
+    <script>
+      // don't work!
+      document.body.style.margin = 10;
+    </script>
+
     <script src="index.js"></script>
   </body>
 </html>
