--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -30,6 +30,11 @@
 
       console.log(document.body.style.marginTop);
       console.log(document.body.style.marginBottom);
+
+      /**
+       * Please note: the browser “unpacks” the property style.margin in the last
+       * lines and infers style.marginLeft and style.marginTop from it.
+       * /
     </script>
 
     <script src="index.js"></script>
