--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -37,6 +37,10 @@
        * /
     </script>
 
+    <script>
+      // Computed styles: getComputedStyle
+    </script>
+
     <script src="index.js"></script>
   </body>
 </html>
