--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -52,6 +52,8 @@
 
     <script>
       // Computed styles: getComputedStyle
+      const computedStyle = getComputedStyle(document.body);
+      console.log(computedStyle);
     </script>
 
     <script src="index.js"></script>
