--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -53,7 +53,8 @@
     <script>
       // Computed styles: getComputedStyle
       const computedStyle = getComputedStyle(document.body);
-      console.log(computedStyle);
+      console.log(computedStyle.padding);
+      console.log(computedStyle.color);
     </script>
 
     <script src="index.js"></script>
