--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -55,6 +55,8 @@
       const computedStyle = getComputedStyle(document.body);
       console.log(computedStyle.padding);
       console.log(computedStyle.color);
+
+      console.log("compuuted margin::", computedStyle.margin);
     </script>
 
     <script src="index.js"></script>
