--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -39,7 +39,7 @@
 
       // now add the CSS unit (px) - and it works
       document.body.style.margin = "10px";
-      console.log(document.body.style.margin);
+      console.log("margin", document.body.style.margin);
 
       console.log(document.body.style.marginTop);
       console.log(document.body.style.marginBottom);
@@ -47,7 +47,7 @@
       /**
        * Please note: the browser “unpacks” the property style.margin in the last
        * lines and infers style.marginLeft and style.marginTop from it.
-       * /
+       * */
     </script>
 
     <script>
