--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/index.html
@@ -57,6 +57,11 @@
       console.log(computedStyle.color);
 
       console.log("compuuted margin::", computedStyle.margin);
+      console.log("compuuted margin left::", computedStyle.marginLeft);
+
+      document.body.style.padding = "";
+      document.body.style.paddingLeft = "30px";
+      document.body.style.paddingTop = "30px";
     </script>
 
     <script src="index.js"></script>
