--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
@@ -16,5 +16,18 @@
       reprehenderit hic at nemo cumque voluptates quidem repellendus maiores
       unde earum molestiae ad.
     </p>
+
+    <script>
+      function showNotification({ top = 0, right = 0, className, html }) {
+        //
+      }
+
+      showNotification({
+        top: 10, // 10px from the top of the window (by default 0px)
+        right: 10, // 10px from the right edge of the window (by default 0px)
+        html: "Hello!", // the HTML of notification
+        className: "welcome", // an additional class for the div (optional)
+      });
+    </script>
   </body>
 </html>
