--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
@@ -19,7 +19,14 @@
 
     <script>
       function showNotification({ top = 0, right = 0, className, html }) {
-        //
+        const div = document.createElement("div");
+        div.style.top = top;
+        div.style.right = right;
+        div.classList.add("notification");
+        if (className) {
+          div.classList.add(className);
+        }
+        div.innerHTML = html;
       }
 
       showNotification({
